@@ -1,3 +1,7 @@
+2012-08-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/RcppBDTpt.cpp: Started module 'bdtPt' with posix time objects
+
 2012-08-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/RcppBDTdu.cpp: New module 'bdtDu' for duration objects which
@@ -14,8 +18,8 @@
 
 2012-08-22  Dirk Eddelbuettel  <edd@dexter>
 
-	* src/RcppBDTtz.cpp: Rewritten bdtTz to be based on small class
-	wrapping tz_db object plus one pointer but of which are initialized
+	* src/RcppBDTtz.cpp: Rewrote bdtTz to be based on small class
+	wrapping tz_db object plus one pointer both of which are initialized
 	from the constructor
 
 2012-08-20  Dirk Eddelbuettel  <edd@dexter>
